force-app/main/default/objects/GOODS__c/GOODS__c.object-meta.xml
<CustomObject>
    <label>GOODS</label>
    <nameField>
        <displayFormat>G-{000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>