force-app/main/default/objects/GOODS__c/fields/GoodsName__c.field-meta.xml
<CustomField>
    <fullName>GoodsName__c</fullName>
    <label>GoodsName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>