force-app/main/default/objects/GOODS__c/fields/GoodsType__c.field-meta.xml
<CustomField>
    <fullName>GoodsType__c</fullName>
    <label>GoodsType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>